--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,13 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
+<dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+    <version>6.0.3</version>
+</dependency>
+
     </dependencies>
 
     <build>
@@ -70,6 +77,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+          <groupId>org.apache.tomcat.maven</groupId>
+          <artifactId>tomcat6-maven-plugin</artifactId>
+          <version>2.2</version>
+        </plugin>
         </plugins>
     </build>
 
